--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -1,1 +1,32 @@
-<p>global works!</p>
+<div class="input-group w-25 d-flex p-2">
+  <input type="text" class="form-control" placeholder="Team Name" aria-label="Team Name" aria-describedby="basic-addon2" #filter>
+  <button class="input-group-text" id="basic-addon2" (click)="onSearch(filter.value)">Search</button>
+</div>
+
+<table class="table table-striped table-hover w-50">
+  <thead>
+    <tr>
+      <th scope="col">id</th>
+      <th scope="col">Team Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let team of filteredTeams | slice: (page-1) * pageSize : (page-1) * pageSize + pageSize">
+      <th scope="row">{{ team.id }}</th>
+      <td [class.selected]="team === selectedTeam" (click)="onSelect(team)">
+        {{team.name}}
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+<ngb-pagination class="d-flex justify-content-center" [(page)]="page" [pageSize]="pageSize" [collectionSize]="filteredTeams.length"></ngb-pagination>
+
+
+<div *ngIf="selectedTeam">
+  <h2>{{selectedTeam.name | uppercase}} Details</h2>
+  <div>id: {{selectedTeam.id}}</div>
+  <div>
+    <label for="hero-name">Hero name: {{selectedTeam.name}}</label>
+  </div>
+</div>
