--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,1 +1,11 @@
-<p>team works!</p>
+<div class="input-group w-25 d-flex p-2">
+  <input type="text" class="form-control" placeholder="Team Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+  <button class="input-group-text" id="basic-addon2">Search</button>
+</div>
+<div class="list-group w-75 d-flex p-2">
+  <a href="#" class="list-group-item list-group-item-action">SKT T1</a>
+  <a href="#" class="list-group-item list-group-item-action">TSM</a>
+  <a href="#" class="list-group-item list-group-item-action">Fanatic</a>
+  <a href="#" class="list-group-item list-group-item-action">Cloud 9</a>
+  <a href="#" class="list-group-item list-group-item-action">Samsung Galaxy</a>
+</div>
