--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,29 @@
-<ul>
-  <li><a routerLink="/tournament">tournament</a></li>
-  <li><a routerLink="/global">global</a></li>
-  <li><a routerLink="/team">team</a></li>
-</ul>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="">
+      <h1>League Project</h1>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tournament">Tournament</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/global">Global</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/team">Team</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
