--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -1,1 +1,11 @@
-<p>tournament works!</p>
+<div class="dropdown d-flex p-2">
+    <a class="btn btn-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+      Dropdown link
+    </a>
+  
+    <ul class="dropdown-menu">
+<!--       <li><input type="text" [ngModel]="searchValue" (ngModelChange)="filterDropdown($event)"></li>
+      <li *ngFor="let tournament of filteredTournaments; let i=index"><a class="dropdown-item" href="#">Action</a></li>
+      <li *ngIf="filteredTournaments.length <=0">No expert found</li> -->
+    </ul>
+  </div>
